--- a/functions/nt/package.json
+++ b/functions/nt/package.json
@@ -14,10 +14,12 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "express": "^5.1.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
