--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue-chartjs": "^5.3.0",
     "vue-i18n": "^9.6.2",
     "vue-router": "^4.2.5",
+    "vue3-easy-data-table": "^1.5.47",
     "vuestic-ui": "^1.10.2"
   },
   "devDependencies": {
