--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vuestic/compiler": "0.2.9",
     "@vuestic/tailwind": "^0.1.3",
     "@vueuse/core": "^10.6.1",
+    "ag-charts-vue3": "^12.3.1",
     "chart.js": "^4.4.1",
     "chartjs-chart-geo": "^4.2.8",
     "epic-spinners": "^2.0.0",
