--- a/package.json
+++ b/package.json
@@ -29,12 +29,18 @@
     "@vuestic/tailwind": "^0.1.3",
     "@vueuse/core": "^10.6.1",
     "ag-charts-vue3": "^12.3.1",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.1",
     "chartjs-chart-geo": "^4.2.8",
+    "cheerio": "^1.1.2",
     "epic-spinners": "^2.0.0",
+    "express": "^5.1.0",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.0",
     "flag-icons": "^6.15.0",
     "ionicons": "^4.6.3",
+    "lightweight-charts": "^5.0.9",
     "medium-editor": "^5.23.3",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
