--- a/firebase.json
+++ b/firebase.json
@@ -18,6 +18,11 @@
       "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log", "*.local"]
     },
     {
+      "source": "functions/mtpl",
+      "codebase": "mtpl",
+      "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log", "*.local"]
+    },
+    {
       "source": "functions/fool",
       "codebase": "fool",
       "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log", "*.local"]
