--- a/functions/ft/package.json
+++ b/functions/ft/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "express": "^5.1.0",
-    "firebase-functions": "^7.0.0"
+    "firebase-functions": "^7.0.0",
+    "technicalindicators": "^3.1.0"
   },
   "private": true
 }
