--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     "vite.config.ts",
     "node_modules/vuestic-ui",
     "src/pages/views/MetalsPage.bak"
-  ],
+, "src/pages/views/FundsPage.bak"  ],
   "exclude": ["node_modules/**/*"]
 }
