--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "vue": "3.5.8",
     "vue-chartjs": "^5.3.0",
     "vue-i18n": "^9.6.2",
+    "vue-markdown-render": "^2.3.0",
     "vue-router": "^4.2.5",
     "vue3-easy-data-table": "^1.5.47",
+    "vue3-markdown": "^1.2.17",
     "vuestic-ui": "^1.10.2"
   },
   "devDependencies": {
@@ -64,6 +66,7 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^7.4.6",
     "@storybook/vue3-vite": "^7.4.6",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/medium-editor": "^5.0.5",
     "@types/node": "^20.9.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
