--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "prettier": "^3.1.0",
     "storybook": "^7.4.6",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.6.3",
     "vite": "^5.4.9",
     "vue-eslint-parser": "^9.3.2",
     "vue-tsc": "^2.1.6"
